[package]
name = "smarst-fan"
description = "Linux service for controlling a PWM fan"
version = "0.9.1"
edition = "2018"
authors = ["Oliver Layer"]
readme = "README.md"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysfs_gpio = "0.6.0"
sysfs-pwm = "0.1.0"
parking_lot = "0.11.2"
systemstat = "0.1.8"
signal-hook = "0.3.10"
pid = "3.0.0"
config = "0.11.0"
glob = "0.3.0"
log = "0.4.14"
simple_logger = "1.13.0"
rumqttc = "0.9.0"
retry = "1.3.0"

[package.metadata.deb]
maintainer-scripts = "debian/"
systemd-units = { enable = true, start = true }
assets = [
    ["target/release/smarst-fan", "/usr/bin/", "755"],
    ["conf/*", "/etc/smaRSt-fan", "644"],
]
conf-files = ["/etc/smaRSt-fan/default.yaml"]
